feat: completed phase B
